# ig-stream-collector

./: LICENSE  Pipfile  README.md  concentrate_week.sh  get_files.sh  ig_stream.sh  pyproject.toml  upload_to_s3.sh
ig-stream-collector/: concentrate.py  ig.py  main.py  upload_s3.py  upload_s3_all.py
ig-stream-downloader/: main.py
