[tool.poetry]
name = "ig-stream-collector"
version = "0.1.0"
description = "IG streaming data collector"
authors = ["zansibal <abrahamsson.richard@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
apscheduler = "^3.11.0"
boto3 = "^1.38.18"
trading-ig = "^0.0.22"
munch = "^4.0.0"
tenacity = "^9.1.2"
watchtower = "^3.4.0"
pyarrow = "^20.0.0"
pycryptodome = "^3.23.0"
requests = "^2.32.3"
awscli = "^1.40.17"
tomli = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
